--- a/style.css
+++ b/style.css
@@ -144,9 +144,14 @@ nav a:hover {
   .navbar h1 {
     font-size: 30px;
     font-weight: 600;
-    margin-left: 5px;
+    margin-left: 2px;
     cursor: pointer;
+    text-align: center;
   }
+  header .navbar {
+    display: block;
+  }
+
   nav a {
     color: #fff;
     margin-left: 18px;
@@ -175,8 +180,8 @@ nav a:hover {
     position: relative;
     width: 100%;
     height: 85vh;
-    margin-top: 70px;
-    margin-left: 70px;
+    margin-top: 85px;
+    /* margin-left: 70px; */
   }
   .home .home-content {
     margin-top: 5px;
@@ -231,7 +236,7 @@ navigation {
   bottom: 2rem;
   display: flex;
   gap: 0.8rem;
-  border-radius: 3rem;
+  border-radius: 2rem;
   backdrop-filter: blur (15px);
   box-shadow: 0px 0px 10px white;
 }
@@ -257,7 +262,11 @@ html,
 body {
   scroll-behavior: smooth;
 }
-
+@media screen and (max-width: 500px) {
+  navigation {
+    left: 45%;
+  }
+}
 /*========================Home page End=========*/
 
 /**********************************About page start*********************/
@@ -560,7 +569,7 @@ h3 {
     color: #fff;
     align-items: center;
     justify-content: center;
-    margin-left: 100px;
+    margin-left: 60px;
     margin-right: 50px;
     margin-top: 100px;
   }
