--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ nav a:hover {
 .about-content p {
   display: none;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
   .navbar h1 {
     font-size: 30px;
     font-weight: 600;
@@ -151,7 +151,9 @@ nav a:hover {
   header .navbar {
     display: block;
   }
-
+  .home {
+    padding: 5px;
+  }
   nav a {
     color: #fff;
     margin-left: 18px;
@@ -180,7 +182,7 @@ nav a:hover {
     position: relative;
     width: 100%;
     height: 85vh;
-    margin-top: 85px;
+    /* margin-top: 85px; */
     /* margin-left: 70px; */
   }
   .home .home-content {
