--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ nav a:hover {
 .about-content p {
   display: none;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .navbar h1 {
     font-size: 30px;
     font-weight: 600;
@@ -182,7 +182,7 @@ nav a:hover {
     position: relative;
     width: 100%;
     height: 85vh;
-    /* margin-top: 85px; */
+    margin-top: 85px;
     /* margin-left: 70px; */
   }
   .home .home-content {
@@ -266,7 +266,7 @@ body {
 }
 @media screen and (max-width: 500px) {
   navigation {
-    left: 45%;
+    left: 35%;
   }
 }
 /*========================Home page End=========*/
@@ -277,7 +277,7 @@ body {
   justify-content: space-between;
   padding: 80px;
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   position: relative;
   background-image: url(assets/bgfull.jpg);
   background-position: center;
@@ -302,8 +302,8 @@ body {
   filter: drop-shadow(0px 0px 10px white);
 }
 .about-content p {
-  font-size: 15px;
-  font-weight: 600;
+  font-size: 13px;
+  font-weight: 500;
   color: #fff;
   filter: drop-shadow(0px 0px 10px black);
 }
@@ -571,7 +571,7 @@ h3 {
     color: #fff;
     align-items: center;
     justify-content: center;
-    margin-left: 60px;
+    margin-left: 50px;
     margin-right: 50px;
     margin-top: 100px;
   }
