--- a/style.css
+++ b/style.css
@@ -264,11 +264,11 @@ html,
 body {
   scroll-behavior: smooth;
 }
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 600px) {
   navigation {
-    left: 40%;
+    left: %;
   }
-}
+} */
 /*========================Home page End=========*/
 
 /**********************************About page start*********************/
@@ -312,7 +312,7 @@ body {
 /********************project start***********************/
 .projects {
   width: 100%;
-  height: 180vh;
+  height: 120vh;
   background-image: url(assets/bgfull.jpg);
   background-position: center;
   background-size: cover;
@@ -399,7 +399,7 @@ article .button .P-btn:hover {
     grid-template-rows: repeat(4, 24%);
   }
   .card article {
-    height: 70vh;
+    height: 60vh;
   }
   .projects {
     height: 170%;
@@ -571,7 +571,7 @@ h3 {
     color: #fff;
     align-items: center;
     justify-content: center;
-    margin-left: 30px;
+    margin-left: 60px;
     margin-right: 50px;
     margin-top: 100px;
   }
