--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ nav a:hover {
   filter: drop-shadow(0px 0px 10px white);
 }
 .home-content h2 {
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: 500;
   filter: drop-shadow(0px 0px 10px white);
 }
 .home-content span {
@@ -572,7 +572,7 @@ h3 {
     align-items: center;
     justify-content: center;
     margin-left: 60px;
-    margin-right: 50px;
+    /* margin-right: 30px; */
     margin-top: 100px;
   }
 }
