--- a/style.css
+++ b/style.css
@@ -572,7 +572,7 @@ h3 {
     align-items: center;
     justify-content: center;
     margin-left: 60px;
-    /* margin-right: 30px; */
+    margin-right: 50px;
     margin-top: 100px;
   }
 }
