--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header .navbar {
 
 nav a {
   color: #fff;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 600;
   transition: 0.5s;
 }
@@ -67,15 +67,7 @@ nav a:hover {
   margin-top: 50px;
   margin-left: 50px;
 }
-/* .home-content h3{
-    color:palegreen;
-    font-size: 25px;
-    font-weight: 600;
-    margin-right: 610px;
-    padding-bottom: 2px;
-    margin-top:10px;
-    filter:drop-shadow(0px 0px 10px white);   
-} */
+
 .home-content h1 {
   font-size: 25px;
   font-weight: 600;
@@ -152,7 +144,7 @@ nav a:hover {
     display: block;
   }
   .home {
-    padding: 5px;
+    padding: 7px;
   }
   nav a {
     color: #fff;
@@ -175,7 +167,6 @@ nav a:hover {
   .home .image .img1 {
     display: none;
   }
-
   .home {
     display: flex;
     flex-direction: column-reverse;
@@ -183,23 +174,92 @@ nav a:hover {
     width: 100%;
     height: 85vh;
     margin-top: 50px;
-    /* margin-left: 70px; */
   }
   .home .home-content {
     margin-top: 5px;
-    margin-left: 50px;
+    margin-left: 40px;
   }
   .home .image {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 80%;
-    height: 1vh;
+    height: 0.5vh;
     filter: drop-shadow(0px 0px 10px cyan);
   }
-  /* .home .home-content h2{
-        margin-bottom: 10px;
-    } */
+
+  .home-content h1 {
+    font-size: 25px;
+    font-weight: 600;
+    filter: drop-shadow(0px 0px 10px white);
+  }
+  .home-content h2 {
+    font-size: 20px;
+    font-weight: 600;
+    filter: drop-shadow(0px 0px 10px white);
+  }
+  .home-content span {
+    color: yellow;
+    font-size: 26px;
+    filter: drop-shadow(0px 0px 10px white);
+  }
+  .about-content h2 {
+    text-align: center;
+  }
+  .about-content h3 {
+    display: none;
+  }
+  .about-content p {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 830px) {
+  nav a {
+    color: #fff;
+    margin-left: 10px;
+    font-size: 13px;
+    font-weight: 450;
+    transition: 0.5s;
+  }
+  .home {
+    height: 130vh;
+  }
+
+  .home .image .img2 {
+    width: 200px;
+    display: block;
+    height: 200px;
+    border-radius: 50%;
+    background: #fff;
+    border: 2px solid cyan;
+    box-shadow: 0px 0px 10px white;
+    filter: drop-shadow(0px 0px 10px cyan);
+    margin-top: 20px;
+  }
+  .home .image .img1 {
+    display: none;
+  }
+  .home {
+    display: flex;
+    flex-direction: column-reverse;
+    position: relative;
+    width: 100%;
+    height: 85vh;
+    margin-top: 50px;
+  }
+  .home .home-content {
+    margin-top: 5px;
+    margin-left: 40px;
+  }
+  .home .image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    height: 0.5vh;
+    filter: drop-shadow(0px 0px 10px cyan);
+  }
   .home-content h1 {
     font-size: 25px;
     font-weight: 600;
@@ -266,7 +326,7 @@ body {
 }
 @media screen and (max-width: 600px) {
   navigation {
-    left: 48%;
+    left: 49%;
   }
 }
 /*========================Home page End=========*/
@@ -277,7 +337,7 @@ body {
   justify-content: space-between;
   padding: 80px;
   width: 100%;
-  height: 120vh;
+  height: 105vh;
   position: relative;
   background-image: url(assets/bgfull.jpg);
   background-position: center;
@@ -312,7 +372,7 @@ body {
 /********************project start***********************/
 .projects {
   width: 100%;
-  height: 120vh;
+  height: 140vh;
   background-image: url(assets/bgfull.jpg);
   background-position: center;
   background-size: cover;
@@ -324,10 +384,7 @@ body {
   align-items: center;
   justify-content: space-evenly;
   padding: 20px;
-  /* padding-right: 0px; */
-  /* grid-template-areas: 20px; */
   width: 100%;
-  /* height: 70vh; */
   margin-top: -50px;
 }
 .projects .card article:hover {
@@ -383,10 +440,6 @@ article .button .P-btn {
   font-weight: 600;
   color: #000;
   filter: drop-shadow(0px 0px 10px white);
-  /* border:none;
-    outline:none;
-    cursor: pointer;
-    transition:.5s; */
 }
 article .button .P-btn:hover {
   scale: 1.2;
@@ -420,15 +473,6 @@ article .button .P-btn:hover {
 /*********************project end********************/
 
 /*********************expertise start********************/
-/* .skills{
-    width: 100%;
-    height:100vh;
-    background-image: url(assets/bgfull.jpg);
-    background-position: center;
-    background-size: cover;
-    
-} */
-
 .skills h2 {
   padding: 40px;
   text-align: center;
@@ -505,6 +549,28 @@ article .button .P-btn:hover {
     bottom: 20px;
   }
 }
+@media screen and (min-width: 600px) and (max-width: 800px) {
+  .skills .container {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 1rem;
+    margin-top: 5px;
+    width: 100%;
+  }
+  .skills .container .row {
+    grid-template-columns: repeat(2, 1fr);
+    margin: 1rem;
+    padding: 2rem 0.2rem 2rem 0.2rem;
+    gap: 1rem;
+  }
+
+  .hire button {
+    position: relative;
+    display: block;
+    right: 50px;
+    bottom: 20px;
+  }
+}
 
 .hire h2 {
   text-align: center;
@@ -556,10 +622,22 @@ h3 {
   margin-right: 50px;
   margin-top: 60px;
 }
-.foot div a:hover {
+.footer {
+  font-size: 25px;
+  margin-top: 10px;
+  color: #fff;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.foot,
+.footer div a:hover {
   scale: 1.2;
   filter: drop-shadow(0px 0px 10px rgb(255, 6, 6));
   color: #fff;
+}
+.footer {
+  display: none;
 }
 @media screen and (max-width: 600px) {
   footer .foot {
@@ -574,5 +652,23 @@ h3 {
     margin-left: 60px;
     margin-right: 50px;
     margin-top: 100px;
+  }
+  .footer {
+    display: none;
+  }
+}
+@media screen and (min-width: 600px) and (max-width: 1200px) {
+  footer .foot {
+    margin: 0;
+    padding: 0;
+  }
+  .foot div a i {
+    display: none;
+  }
+  .footer {
+    display: block;
+  }
+  .getIn {
+    height: 340px;
   }
 }
